hphp/hack/test/typecheck/constraint_array_index/after/option_vec_bad_access_null_coalesce.php.exp
ERROR: File "option_vec_bad_access_null_coalesce.php", line 3, characters 10-16:
Invalid index type for this vec (Typing[4449])
  File "option_vec_bad_access_null_coalesce.php", line 2, characters 13-15:
  This is an int because only `int` can be used to index into a `Vector` or `vec`.
  File "option_vec_bad_access_null_coalesce.php", line 3, characters 13-15:
  It is incompatible with a string
ERROR: File "option_vec_bad_access_null_coalesce.php", line 3, characters 10-16:
Typing error (Typing[4110])
  File "option_vec_bad_access_null_coalesce.php", line 2, characters 13-20:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "option_vec_bad_access_null_coalesce.php", line 3, characters 13-15:
  But got `string`
