hphp/hack/test/typecheck/constraint_array_index/after/option_vec_bad_access_null_coalesce.php
<?hh
function f(?vec<int> $v): int {
  return $v["a"] ?? 0;
}
